# hot-reload-python-app

./: .gitignore  READEME.md  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
application/: .dockerignore  Dockerfile  pyproject.toml  start-debug.sh  start-reload.sh  start.sh
application/code/: main.py
