[tool.poetry]
name = "application"
version = "0.1.0"
description = "A dockerized python application with hot-reload"
authors = ["endrekrohn <endre-krohn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
debugpy = {version = "^1.5.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
autoflake = "^1.4"
pyright = "^1.1.258"
watchfiles = "^0.15.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
debug = ["debugpy"]